--- a/index.html
+++ b/index.html
@@ -2,11 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>EANT - Fullstack Essentials</title>
+	<title>EANT - Fullstack Essentials</title>
+	<style>
+		h1 {
+			color: bisque;
+			background-color: tomato;
+			font-size: 40px;
+			text-decoration: underline;
+			font-family: Arial, Helvetica, sans-serif;
+			font-style: italic;
+		}
+		a {
+			background-color: #fff000;
+			color: black;
+			text-decoration: none;
+			font-family: Arial;
+		}
+		a:hover {
+			background-color: #888888;
+			color: white;
+		}
+	</style>
 </head>
 <body>
-	<h1 style="color: turquoise;background-color: tomato;font-size: 40px;text-decoration: underline;font-family: arial;font-style: italic;">Aprendiendo GIt</h1>
+	<h1>Aprendiendo GIt</h1>
 	<p>Git es un <strong>software</strong>de control de versiones por </p>
+	<a href="https://eant.tech/escuela-de-ciencias-de-datos/programas/carrera-data-scientist" target="_blank" title="ver mas en EANT">EANT</a>
 
 </body>
 </html>
