el abc de html, css y js

--- a/index.html
+++ b/index.html
@@ -3,31 +3,22 @@
 <head>
     <meta charset="UTF-8">
 	<title>EANT - Fullstack Essentials</title>
-	<style>
-		h1 {
-			color: bisque;
-			background-color: tomato;
-			font-size: 40px;
-			text-decoration: underline;
-			font-family: Arial, Helvetica, sans-serif;
-			font-style: italic;
-		}
-		a {
-			background-color: #fff000;
-			color: black;
-			text-decoration: none;
-			font-family: Arial;
-		}
-		a:hover {
-			background-color: #888888;
-			color: white;
-		}
-	</style>
+	<link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
 	<h1>Aprendiendo GIt</h1>
 	<p>Git es un <strong>software</strong>de control de versiones por </p>
-	<a href="https://eant.tech/escuela-de-ciencias-de-datos/programas/carrera-data-scientist" target="_blank" title="ver mas en EANT">EANT</a>
+	
+	<a href="https://www.linux.org" target="_blank"><img src="img/tux.png" alt="user" width="50" height="50" ></a>
+	
 
+	<a href="https://eant.tech/escuela-de-ciencias-de-datos/programas/carrera-data-scientist" target="_blank" title="ver mas en EANT">EANT</a>
+	
+
+	<script src="js/main.js"></script>
+	<script>
+		document.querySelector("strong").onclick = saludar
+	</script>
 </body>
 </html>
