Empezando el Proyecto DX

--- a/index.html
+++ b/index.html
@@ -2,23 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	<title>EANT - Fullstack Essentials</title>
+	<title>DX DeporteXtremo</title>
 	<link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
-	<h1>Aprendiendo GIt</h1>
-	<p>Git es un <strong>software</strong>de control de versiones por </p>
-	
-	<a href="https://www.linux.org" target="_blank"><img src="img/tux.png" alt="user" width="50" height="50" ></a>
-	
 
-	<a href="https://eant.tech/escuela-de-ciencias-de-datos/programas/carrera-data-scientist" target="_blank" title="ver mas en EANT">EANT</a>
-	
 
 	<script src="js/main.js"></script>
-	<script>
-		document.querySelector("strong").onclick = saludar
-	</script>
 </body>
 </html>
