Empezando a maquetar el Header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
 
 </head>
 <body>
-
+	<header>
+		<h1>DeporteXtremo</h1>
+		<nav>
+			<ul>
+				<li><a href="#">Fútbol</a></li>
+				<li><a href="#">NBA</a></li>
+				<li><a href="#">Tenis</a></li>
+				<li><a href="#">Fórmula</a></li>
+				<li><a href="#">Boxéo</a></li>
+				<li><a href="#">JJOO</a></li>
+				<li><a href="#">Moto GP</a></li>
+			</ul>
+		</nav>
+	</header> 
 
 	<script src="js/main.js"></script>
 </body>
