--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<li><a href="#">Fútbol</a></li>
 				<li><a href="#">NBA</a></li>
 				<li><a href="#">Tenis</a></li>
-				<li><a href="#">Fórmula</a></li>
+				<li><a href="#">Fórmula 1</a></li>
 				<li><a href="#">Boxéo</a></li>
 				<li><a href="#">JJOO</a></li>
 				<li><a href="#">Moto GP</a></li>
@@ -22,6 +22,6 @@
 		</nav>
 	</header> 
 
-	<script src="js/main.js"></script>
+	<!-- <script src="js/main.js"></script> -->
 </body>
 </html>
