Maquetando Noticias Destacadas

--- a/index.html
+++ b/index.html
@@ -23,6 +23,26 @@
 		</nav>
 	</header>
 
+	<main>
+		<section id="noticias-destacadas">
+			<!-- seccion de noticias destacadas -->
+			<figure>
+				<img src="img/juegos-olimpicos.jpg" alt="juegos">
+				<figcaption>
+					<h2>París y Los Ángeles serán las proximas sedes de los Juegos Olímpicos</h2>
+				</figcaption>
+			</figure>
+		</section>
+
+		<section id="ultimas-noticias">
+			<!-- seccion de ultimas noticias -->
+		</section>
+
+		<section id="tabla-posiciones">
+			<!-- seccion de tabla de posisciones -->
+		</section>
+	</main>
+
 	<!-- <script src="js/main.js"></script> -->
 </body>
 </html>
