--- a/index.html
+++ b/index.html
@@ -36,11 +36,57 @@
 
 		<section id="ultimas-noticias">
 			<!-- seccion de ultimas noticias -->
+			<article class="noticia">
+				<div class="noticia-img">
+					<img src="img/sorteo-libertadores.jpg" alt="sorteo">
+				</div>
+				<div class="noticia-txt">
+					<h3>La tecnología llega a la actual edición de la Libertadores</h3>
+					<p>por <a href=""> Joaquín Angeli</a></p>
+					<p>La Conmebol anunció la implementaacion del sistema VAR (asistecnia arbitral por video) desde las semifinales de la actual Libertadores.</p>
+				</div>
+			</article>
+			
+			<article class="noticia">
+				<div class="noticia-img">
+					<img src="img/tickets-rusia-mundial.jpg" alt="ticket">
+				</div>
+				<div class="noticia-txt">
+					<h3>Comenzó la venta de entradas para el Mundial de Rusia 2018</h3>
+					<p>por <a href="#"> Laura Smasnatta </a></p>
+					<p>Hoy se abrió la venta público de tickets, a travéz del sitio oficialde la FIFA. El proceso se dividirá en dos partes y los espectadores deberán solicitar una tarjeta de hincha 'Fan ID'.</p>
+				</div>
+			</article>
+	
+			<article class="noticia">
+				<div class="noticia-img">
+					<img src="img/firpo.jpg" alt="box">
+				</div>
+				<div class="noticia-txt">
+					<h3>A 94 años del derechazo que convirtió en leyenda a Luis Ángel Firpo</h3>
+					<p>por <a href="#">Diego Di Marco </a></p>
+					<p>El 14/9/1923 el boxeador argentino enfrentó en Nueva York a Jack Dempsey, uno de los mejores pesos pesados de la historia.</p>
+				</div>
+			</article>
+
+			<article class="noticia">
+				<div class="noticia-img">
+					<img src="img/buenos-aires.jpg" alt="BsAs">
+				</div>
+				<div class="noticia-txt">
+					<h3>Buenos Aires 2018 presentó su innovador proyecto de parques y de ceremonia inaugural ante el COI</h3>
+					<p>por <a href="#">Melina Morales </a></p>
+					<p>EL Comité Organizador de los Juegos de la Juventud presentó su concepto de parques ante la 131 a sesión del Comité Olímpico Internacional(COI) que se realizó en Lima. La ceremonia inauguralse realizará al aire libre.</p>
+				</div>
+			</article>
 		</section>
 
 		<section id="tabla-posiciones">
 			<!-- seccion de tabla de posisciones -->
 		</section>
+		<footer>
+			<p>&copy; Copyright 2017 / 2019  - DeporteXtremo - Derechos Reservados</p>
+		</footer>
 	</main>
 
 	<!-- <script src="js/main.js"></script> -->
