--- a/index.html
+++ b/index.html
@@ -83,6 +83,38 @@
 
 		<section id="tabla-posiciones">
 			<!-- seccion de tabla de posisciones -->
+			
+			
+			
+			<table>
+				<tr>
+					<th colspan="4">3er Fecha</th>
+				</tr>
+				<tr>
+					<td>1</td> <span></span>
+					<td><span>Tigre</span>, 1pts<br><span>Patronato</span>, 3pts</td>
+					<td>2</td>
+					<td><span>Colón</span>, 4pts<br><span>Estudiantes</span>, 3 pts</td>
+				</tr>
+				<tr>
+					<td>3</td>
+					<td><span>Def. y Justicia</span>, 4pts<br><span>Únion</span>, 4pts</td>
+					<td>4</td>
+					<td><span>Argentinos Juniors</span>, 0pts<br><span>Belgrano</span>, 3pts</td>
+				</tr>
+				<tr>
+					<td>5</td>
+					<td><span>Newell's</span>, 1px<br><span>Olimpo</span>, 1pts</td>
+					<td>6</td>
+					<td><span>San Lorenzo</span>, 2pts<br><span>Arsenal</span>, 0pts</td>
+				</tr>
+				<tr>
+					<td>7</td>
+					<td><span>Independencia</span>, 4pts<br><span>Lanus</span>, 0pts</td>
+					<td>8</td>
+					<td><span>Talleres</span>, 3pts<br><span>Vélez</span>, 3pts</td>
+				</tr>
+			</table>
 		</section>
 		<footer>
 			<p>&copy; Copyright 2017 / 2019  - DeporteXtremo - Derechos Reservados</p>
