--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>DX DeporteXtremo</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -10,7 +11,8 @@
 <body>
 	<header>
 		<h1>DeporteXtremo</h1>
-		<nav>
+		<button id="menu-mobile">&#9776;</button>
+		<nav id="menu">
 			<ul>
 				<li><a href="#">Fútbol</a></li>
 				<li><a href="#">NBA</a></li>
