--- a/index.html
+++ b/index.html
@@ -6,9 +6,53 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>joder</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" href="css/style.css"> -->
 </head>
 <body>
-	
+	<main class="container-fluid">
+		<!--  Inicio  de Noticias  -->
+		<article class="row">
+			<div class="col-12 col-md-4">
+				<img src="img/sorteo-libertadores.jpg" alt="" class="img-fluid">
+			</div>
+			<div class="col-12 col-md-8">
+				<h3>La tecnología llega a la actual edición de la Libertadores</h3>
+				<p>por Joaquín Angeli</p>
+				<p>La Conmebol anunció la implementaacion del sistema VAR (asistecnia arbitral por video) desde las semifinales de la actual Libertadores.</p>
+			</div>
+		</article>
+		<article class="row">
+			<div class="col-12 col-md-4">
+				<img src="img/tickets-rusia-mundial.jpg" class="img-fluid">
+			</div>
+			<div class="col-12 col-md-8">
+				<h3>Comenzó la venta de entradas para el Mundial de Rusia 2018</h3>
+				<p>por Laura Smasnatta</p>
+				<p>Hoy se abrió la venta público de tickets, a travéz del sitio oficialde la FIFA. El proceso se dividirá en dos partes y los espectadores deberán solicitar una tarjeta de hincha 'Fan ID'.</p>
+			</div>
+		</article>
+		<article class="row">
+			<div class="col-12 col-md-4">
+				<img src="img/firpo.jpg" class="img-fluid">
+			</div>
+				<div class="col-12 col-md-8">
+				<h3>A 94 años del derechazo que convirtió en leyenda a Luis Ángel Firpo</h3>
+				<p>por Diego Di Marco</p>
+				<p>El 14/9/1923 el boxeador argentino enfrentó en Nueva York a Jack Dempsey, uno de los mejores pesos pesados de la historia.</p>
+			</div>
+		</article>
+		<article class="row">
+			<div class="col-12 col-md-4">
+				<img src="img/buenos-aires.jpg" class="img-fluid">
+			</div>
+			<div class="col-12 col-md-8">
+				<h3>Buenos Aires 2018 presentó su innovador proyecto de parques y de ceremonia inaugural ante el COI</h3>
+				<p>por Melina Morales</p>
+				<p>EL Comité Organizador de los Juegos de la Juventud presentó su concepto de parques ante la 131 a sesión del Comité Olímpico Internacional(COI) que se realizó en Lima. La ceremonia inauguralse realizará al aire libre.</p>
+			</div>
+		</article>
+		<!--  END Inicio  de Noticias  -->
+	</main>
 
 
 
