Ajustes visuales de las noticias

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>joder</title>
+	<title>DX - DeporteXtremo</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- <link rel="stylesheet" href="css/style.css"> -->
 </head>
 <body>
 	<main class="container-fluid">
 		<!--  Inicio  de Noticias  -->
-		<article class="row">
+		<article class="row py-2 mx-2 border-bottom">
 			<div class="col-12 col-md-4">
 				<img src="img/sorteo-libertadores.jpg" alt="" class="img-fluid">
 			</div>
@@ -21,7 +21,7 @@
 				<p>La Conmebol anunció la implementaacion del sistema VAR (asistecnia arbitral por video) desde las semifinales de la actual Libertadores.</p>
 			</div>
 		</article>
-		<article class="row">
+		<article class="row py-2 mx-2 border-bottom">
 			<div class="col-12 col-md-4">
 				<img src="img/tickets-rusia-mundial.jpg" class="img-fluid">
 			</div>
@@ -31,7 +31,7 @@
 				<p>Hoy se abrió la venta público de tickets, a travéz del sitio oficialde la FIFA. El proceso se dividirá en dos partes y los espectadores deberán solicitar una tarjeta de hincha 'Fan ID'.</p>
 			</div>
 		</article>
-		<article class="row">
+		<article class="row py-2 mx-2 border-bottom">
 			<div class="col-12 col-md-4">
 				<img src="img/firpo.jpg" class="img-fluid">
 			</div>
@@ -41,7 +41,7 @@
 				<p>El 14/9/1923 el boxeador argentino enfrentó en Nueva York a Jack Dempsey, uno de los mejores pesos pesados de la historia.</p>
 			</div>
 		</article>
-		<article class="row">
+		<article class="row py-2 mx-2">
 			<div class="col-12 col-md-4">
 				<img src="img/buenos-aires.jpg" class="img-fluid">
 			</div>
