--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>DX - DeporteXtremo</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 	<!-- <link rel="stylesheet" href="css/style.css"> -->
 </head>
 <body>
@@ -19,30 +20,66 @@
 		<div class="collapse navbar-collapse" id="menu">
 			<ul class="navbar-nav ml-lg-auto text-center">
 				<li class="nav-item">
-					<a class="nav-link" href="#">Futbol</a>
+					<a class="nav-link" href="#"><i class="far fa-futbol"></i> Futbol</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">NBA</a>
+					<a class="nav-link" href="#"> <i class="fas fa-basketball-ball"></i> NBA</a>
 				</li>
 				<li class="nav-item">
-						<a class="nav-link" href="#">Tenis</a>
+					<a class="nav-link" href="#"><i class="fas fa-table-tennis"></i> Tenis</a>
 				</li>
 				<li class="nav-item">
-						<a class="nav-link" href="#">Formula 1</a>
+					<a class="nav-link" href="#"><i class="fas fa-car-alt"></i> Formula 1</a>
 				</li>
 				<li class="nav-item">
-						<a class="nav-link" href="#">Boxeó</a>
+					<a class="nav-link" href="#"><i class="fas fa-boxes"></i> Boxeó</a>
 				</li>
 				<li class="nav-item">
-						<a class="nav-link" href="#">JJOO</a>
+					<a class="nav-link" href="#"><i class="fas fa-medal"></i> JJOO</a>
 				</li>
 				<li class="nav-item">
-						<a class="nav-link" href="#">Moto GP</a>
+					<a class="nav-link" href="#"><i class="fas fa-motorcycle"></i> Moto GP</a>
 				</li>
 			</ul>
 		</div>
 	</nav>
 	<!--  END Menu  -->
+
+	<!--  Slider  -->
+	<div id="slider" class="carousel slide" data-ride="carousel">
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img src="img/juegos-olimpicos.jpg" class="d-block w-100" alt="...">
+				<div class="carousel-caption d-none d-md-block bg-dark position-static text-left p-3">
+					<h2>París y Los Ángeles serán las proximas sedes de los Juegos Olímpicos</h2>
+				</div>
+			</div>
+
+			<div class="carousel-item">
+				<img src="img/juegos-olimpicos.jpg" class="d-block w-100" alt="...">
+				<div class="carousel-caption d-none d-md-block bg-dark position-static text-left p-3">
+					<h2>Hzaña historica: Ricciardo marcó el ritmo en los libres Azerbaiyán</h2>
+				</div>
+			</div>
+			
+			<div class="carousel-item">
+				<img src="img/juegos-olimpicos.jpg" class="d-block w-100" alt="...">
+				<div class="carousel-caption d-none d-md-block bg-dark position-static text-left p-3">
+					<h2>En Córdoba arrancó la 1er etapa del 38º Rally de la Argetina</h2>
+				</div>
+			</div>
+		</div>
+		<a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#slider" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
+	</div>
+	<!--  END Slider  -->
+
 	<main class="container-fluid">
 		<!--  Inicio  de Noticias  -->
 		<article class="row py-2 mx-2 border-bottom">
@@ -88,7 +125,9 @@
 		<!--  END Inicio  de Noticias  -->
 	</main>
 
+	<!--  tabla de posiciones  -->
 
+	<!--  END tabla de posiciones  -->
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
