Agregando script de inicio para Heroku

--- a/public/index.html
+++ b/public/index.html
@@ -201,7 +201,7 @@
 						//  para consumir api de terceros   --> url
 
 						article.querySelector('h3').innerText = noticia.title
-						article.querySelector('strong').innerText = noticia.autor
+						article.querySelector('strong').innerText = noticia.author
 						article.querySelector('p:nth-of-type(2)').innerText = noticia.description
 						article.querySelector('img').src = noticia.enclosure.link
 
